Update kingdom to prosemirror and fix settlement expand/collapse behavior

--- a/src/styles/actor/party/kingdom/_world.scss
+++ b/src/styles/actor/party/kingdom/_world.scss
@@ -174,11 +174,17 @@ input[type="number"] {
     }
 
     .editor {
-        display: flex;
-        flex-direction: column;
-        .tox {
-            flex: 1;
-            min-height: 16rem;
+        min-height: 2rem;
+        .editor-content {
+            @include journal-styling;
+            padding: 0 var(--space-4);
+        }
+
+        &.prosemirror {
+            min-height: 15rem; // When the editor is open, fill more space
+            .editor-container {
+                margin: var(--space-4) 0;
+            }
         }
     }
 }
